examples/bad/ERROR_INCORRECT_NUMBER_OF_ARGUMENTS/infer_fix_multiple_param.st
language core;

extend with #fixpoint-combinator, #multiparameter-functions;

fn foo(a : Nat, b : Nat) -> Bool {
  return true
}

fn main(n : Nat) -> Nat {
  return (fn (a : Nat) { return fix(foo); } ) (0)
}

//ERROR_INCORRECT_NUMBER_OF_ARGUMENTS
